gitops/gateway/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cloudlab
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "cloudlab-gateway"
spec:
  gatewayClassName: envoy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.lab.christiaan.cloud"
      allowedRoutes:
        namespaces:
          from: All
